syntax = "proto3";

package order;
option go_package="./order";


service Order {
    rpc ListOrders(ListOrdersRequest) returns(ListOrdersResponse);
    rpc CreateOrder(CreateOrderRequest) returns(CreateOrderResponse);
    rpc CreateOrderCheck(CreateOrderRequest) returns (CreateOrderResponse);
    rpc RollbackOrder (CreateOrderRequest) returns (CreateOrderResponse);
    rpc SubmitOrderDTM(SubmitOrderDTMRequest) returns(SubmitOrderDTMResponse);
    rpc GetOrderByID(GetOrderRequest) returns(GetOrderResponse);
}

message ListOrdersRequest {
    int64 user_id = 1;
    int32 status = 2;
    int64 cursor = 3;
    int32 page_size = 4;
}

message ListOrdersResponse {
    repeated OrderItem orders = 1;
    bool is_end = 2;
    string create_time = 3;
}

message OrderItem {
    string id = 1;
    int64 user_id = 2;
    int64 shopping_id = 3;
    double payment = 4;
    int64 payment_type = 5;
    int64 postage = 6;
    int64 status = 7;
    int64 create_time = 8;
    int64 update_time = 9;
}

message CreateOrderRequest {
    int64 user_id = 1;
    int64 product_id = 2;
}
  
message CreateOrderResponse {
}

message SubmitOrderDTMRequest {
    int64 user_id = 1;
    int64 product_id = 2;
    int64 quantity = 3;
    int64 postage = 4;
    int64 receive_address = 5;
}

message SubmitOrderDTMResponse {
    string id = 1;
}

message GetOrderRequest {
    int64 id = 1;
}

message GetOrderResponse {
    OrderItem order = 1;
}